using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StringValues {

    public static string FolderPath = "";
    public static string PatientFolder = "PatientFolder";


    public static string OpenBook = "OpenBook";
    public static string CloseBook = "CloseBook";
    public static string FlipPage = "FlipPage";
    public static string FlipPageBack = "FlipPageBack";


}
